--- a/Mercywatch/Mercywatch.csproj
+++ b/Mercywatch/Mercywatch.csproj
@@ -93,34 +93,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Heroes.cs">
-      <DependentUpon>ModelMercyWatch.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Hero.cs" />
     <Compile Include="IParser.cs" />
-    <Compile Include="MercyWatchDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MercyWatchDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="ModelMercyWatch.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelMercyWatch.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModelMercyWatch.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelMercyWatch.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModelMercyWatch.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelMercyWatch.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Parser.cs" />
-    <Compile Include="Players.cs">
-      <DependentUpon>ModelMercyWatch.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebClientEx.cs">
@@ -140,25 +116,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EntityDeploy Include="ModelMercyWatch.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModelMercyWatch.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="MercyWatchDataSet.xsc">
-      <DependentUpon>MercyWatchDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="MercyWatchDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>MercyWatchDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="MercyWatchDataSet.xss">
-      <DependentUpon>MercyWatchDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Mercywatch_TemporaryKey.pfx" />
-    <None Include="ModelMercyWatch.edmx.diagram">
-      <DependentUpon>ModelMercyWatch.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -189,17 +147,6 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ModelMercyWatch.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ModelMercyWatch.Context.cs</LastGenOutput>
-      <DependentUpon>ModelMercyWatch.edmx</DependentUpon>
-    </Content>
-    <Content Include="ModelMercyWatch.edmx.sql" />
-    <Content Include="ModelMercyWatch.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ModelMercyWatch.cs</LastGenOutput>
-      <DependentUpon>ModelMercyWatch.edmx</DependentUpon>
-    </Content>
     <Content Include="XMLFileBase.xml">
       <CustomToolNamespace>Reso</CustomToolNamespace>
     </Content>
